--- a/kadaster.ipynb
+++ b/kadaster.ipynb
@@ -2,17 +2,417 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>perceelid</th>\n",
+       "      <th>perceeltype</th>\n",
+       "      <th>huisnr</th>\n",
+       "      <th>huisnr_bag_letter</th>\n",
+       "      <th>huisnr_bag_toevoeging</th>\n",
+       "      <th>bag_nummeraanduidingid</th>\n",
+       "      <th>bag_adresseerbaarobjectid</th>\n",
+       "      <th>lat</th>\n",
+       "      <th>lon</th>\n",
+       "      <th>rdx</th>\n",
+       "      <th>rdy</th>\n",
+       "      <th>oppervlakte</th>\n",
+       "      <th>gebruiksdoel</th>\n",
+       "      <th>reeksid</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>verblijfsobject</td>\n",
+       "      <td>105</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3.632000e+14</td>\n",
+       "      <td>3.630100e+14</td>\n",
+       "      <td>52.377782</td>\n",
+       "      <td>4.905169</td>\n",
+       "      <td>122177.0</td>\n",
+       "      <td>487877.0</td>\n",
+       "      <td>96</td>\n",
+       "      <td>kantoorfunctie</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>verblijfsobject</td>\n",
+       "      <td>105</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3.632000e+14</td>\n",
+       "      <td>3.630100e+14</td>\n",
+       "      <td>52.377782</td>\n",
+       "      <td>4.905169</td>\n",
+       "      <td>122177.0</td>\n",
+       "      <td>487877.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>woonfunctie</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>verblijfsobject</td>\n",
+       "      <td>105</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>H</td>\n",
+       "      <td>3.632000e+14</td>\n",
+       "      <td>3.630100e+14</td>\n",
+       "      <td>52.377782</td>\n",
+       "      <td>4.905169</td>\n",
+       "      <td>122177.0</td>\n",
+       "      <td>487877.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>winkelfunctie</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>verblijfsobject</td>\n",
+       "      <td>106</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3.632000e+14</td>\n",
+       "      <td>3.630100e+14</td>\n",
+       "      <td>52.377835</td>\n",
+       "      <td>4.905286</td>\n",
+       "      <td>122185.0</td>\n",
+       "      <td>487882.9</td>\n",
+       "      <td>1</td>\n",
+       "      <td>kantoorfunctie</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>6</td>\n",
+       "      <td>verblijfsobject</td>\n",
+       "      <td>106</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3.632000e+14</td>\n",
+       "      <td>3.630100e+14</td>\n",
+       "      <td>52.377836</td>\n",
+       "      <td>4.905286</td>\n",
+       "      <td>122185.0</td>\n",
+       "      <td>487883.0</td>\n",
+       "      <td>91</td>\n",
+       "      <td>kantoorfunctie</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id  perceelid      perceeltype  huisnr huisnr_bag_letter  \\\n",
+       "0   0          2  verblijfsobject     105               NaN   \n",
+       "1   1          3  verblijfsobject     105               NaN   \n",
+       "2   2          4  verblijfsobject     105               NaN   \n",
+       "3   3          5  verblijfsobject     106               NaN   \n",
+       "4   4          6  verblijfsobject     106               NaN   \n",
+       "\n",
+       "  huisnr_bag_toevoeging  bag_nummeraanduidingid  bag_adresseerbaarobjectid  \\\n",
+       "0                     2            3.632000e+14               3.630100e+14   \n",
+       "1                     3            3.632000e+14               3.630100e+14   \n",
+       "2                     H            3.632000e+14               3.630100e+14   \n",
+       "3                     1            3.632000e+14               3.630100e+14   \n",
+       "4                     2            3.632000e+14               3.630100e+14   \n",
+       "\n",
+       "         lat       lon       rdx       rdy  oppervlakte    gebruiksdoel  \\\n",
+       "0  52.377782  4.905169  122177.0  487877.0           96  kantoorfunctie   \n",
+       "1  52.377782  4.905169  122177.0  487877.0            1     woonfunctie   \n",
+       "2  52.377782  4.905169  122177.0  487877.0            1   winkelfunctie   \n",
+       "3  52.377835  4.905286  122185.0  487882.9            1  kantoorfunctie   \n",
+       "4  52.377836  4.905286  122185.0  487883.0           91  kantoorfunctie   \n",
+       "\n",
+       "   reeksid  \n",
+       "0        1  \n",
+       "1        1  \n",
+       "2        1  \n",
+       "3        2  \n",
+       "4        2  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Load the Pandas libraries with alias 'pd' \n",
+    "import pandas as pd \n",
+    "# Read data from file 'filename.csv' \n",
+    "# (in the same directory that your python process is based)\n",
+    "# Control delimiters, rows, column names with read_csv (see later) \n",
+    "df_kadaster = pd.read_csv('amsterdam.csv') \n",
+    "# Preview the first 5 lines of the loaded data \n",
+    "df_kadaster.columns =['id','perceelid', 'perceeltype', 'huisnr', 'huisnr_bag_letter','huisnr_bag_toevoeging','bag_nummeraanduidingid','bag_adresseerbaarobjectid','lat','lon','rdx','rdy','oppervlakte','gebruiksdoel','reeksid']\n",
+    "df_kadaster.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>object_id</th>\n",
+       "      <th>incident</th>\n",
+       "      <th>nr_of_accomodations_in_building</th>\n",
+       "      <th>nr_of_residential_accomodations_in_building</th>\n",
+       "      <th>floorsize_accomodation</th>\n",
+       "      <th>construction_year</th>\n",
+       "      <th>timeline</th>\n",
+       "      <th>function</th>\n",
+       "      <th>situation</th>\n",
+       "      <th>ownership</th>\n",
+       "      <th>is_monument</th>\n",
+       "      <th>neighborhood</th>\n",
+       "      <th>nr_of_inspections_within_timeline</th>\n",
+       "      <th>nr_of_inspections_with_observation</th>\n",
+       "      <th>nr_of_inspections_without_observation</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1b47f57e7692d3c095345d98bfd85b1c06dd9c268d5dd4...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>15</td>\n",
+       "      <td>13</td>\n",
+       "      <td>29</td>\n",
+       "      <td>983</td>\n",
+       "      <td>31/12/9999</td>\n",
+       "      <td>Woning|Berging/schuur</td>\n",
+       "      <td>Tussengebouw</td>\n",
+       "      <td>Huur</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Anjeliersbuurt</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1b47f57e7692d3c095345d98bfd85b1c06dd9c268d5dd4...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>14</td>\n",
+       "      <td>4</td>\n",
+       "      <td>19</td>\n",
+       "      <td>983</td>\n",
+       "      <td>31/12/9999</td>\n",
+       "      <td>Woning|Berging/schuur</td>\n",
+       "      <td>Tussengebouw</td>\n",
+       "      <td>Huur</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Anjeliersbuurt Zuid</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4db936db50deabc74a224621503fc16465e29f23fcb595...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>10</td>\n",
+       "      <td>8</td>\n",
+       "      <td>51</td>\n",
+       "      <td>983</td>\n",
+       "      <td>31/12/9999</td>\n",
+       "      <td>Woning|Berging/schuur</td>\n",
+       "      <td>Tussengebouw</td>\n",
+       "      <td>Huur</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Anjeliersbuurt</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4db936db50deabc74a224621503fc16465e29f23fcb595...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>15</td>\n",
+       "      <td>3</td>\n",
+       "      <td>36</td>\n",
+       "      <td>983</td>\n",
+       "      <td>31/12/9999</td>\n",
+       "      <td>Woning|Berging/schuur</td>\n",
+       "      <td>Tussengebouw</td>\n",
+       "      <td>Huur</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Anjeliersbuurt Zuid</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4db936db50deabc74a224621503fc16465e29f23fcb595...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>10</td>\n",
+       "      <td>8</td>\n",
+       "      <td>18</td>\n",
+       "      <td>983</td>\n",
+       "      <td>18/06/2012</td>\n",
+       "      <td>woning</td>\n",
+       "      <td>Tussengebouw</td>\n",
+       "      <td>Huur</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Anjeliersbuurt</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                           object_id  incident  \\\n",
+       "0  1b47f57e7692d3c095345d98bfd85b1c06dd9c268d5dd4...         0   \n",
+       "1  1b47f57e7692d3c095345d98bfd85b1c06dd9c268d5dd4...         0   \n",
+       "2  4db936db50deabc74a224621503fc16465e29f23fcb595...         0   \n",
+       "3  4db936db50deabc74a224621503fc16465e29f23fcb595...         0   \n",
+       "4  4db936db50deabc74a224621503fc16465e29f23fcb595...         0   \n",
+       "\n",
+       "   nr_of_accomodations_in_building  \\\n",
+       "0                               15   \n",
+       "1                               14   \n",
+       "2                               10   \n",
+       "3                               15   \n",
+       "4                               10   \n",
+       "\n",
+       "   nr_of_residential_accomodations_in_building  floorsize_accomodation  \\\n",
+       "0                                           13                      29   \n",
+       "1                                            4                      19   \n",
+       "2                                            8                      51   \n",
+       "3                                            3                      36   \n",
+       "4                                            8                      18   \n",
+       "\n",
+       "   construction_year    timeline               function     situation  \\\n",
+       "0                983  31/12/9999  Woning|Berging/schuur  Tussengebouw   \n",
+       "1                983  31/12/9999  Woning|Berging/schuur  Tussengebouw   \n",
+       "2                983  31/12/9999  Woning|Berging/schuur  Tussengebouw   \n",
+       "3                983  31/12/9999  Woning|Berging/schuur  Tussengebouw   \n",
+       "4                983  18/06/2012                 woning  Tussengebouw   \n",
+       "\n",
+       "  ownership  is_monument         neighborhood  \\\n",
+       "0      Huur            0       Anjeliersbuurt   \n",
+       "1      Huur            0  Anjeliersbuurt Zuid   \n",
+       "2      Huur            0       Anjeliersbuurt   \n",
+       "3      Huur            0  Anjeliersbuurt Zuid   \n",
+       "4      Huur            0       Anjeliersbuurt   \n",
+       "\n",
+       "   nr_of_inspections_within_timeline  nr_of_inspections_with_observation  \\\n",
+       "0                                  0                                   0   \n",
+       "1                                  0                                   0   \n",
+       "2                                  0                                   0   \n",
+       "3                                  0                                   0   \n",
+       "4                                  0                                   0   \n",
+       "\n",
+       "   nr_of_inspections_without_observation  \n",
+       "0                                      0  \n",
+       "1                                      0  \n",
+       "2                                      0  \n",
+       "3                                      0  \n",
+       "4                                      0  "
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_dummy = pd.read_csv('dummy_def.csv',delimiter=';') \n",
+    "\n",
+    "df_dummy.tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "print(\"jel\")"
-   ]
+   "source": []
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "7f7611504466d71c91faf2c263f624d785ad66c40f10bc09389fe86e42d45d19"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.9.4 64-bit ('venv_python_dsp': pyenv)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.4"
   },
   "orig_nbformat": 4
  },
