--- a/klad.ipynb
+++ b/klad.ipynb
@@ -189,17 +189,22 @@
     "### Generate the subset for Amsterdam of perceel.csv\n",
     "### Don't run this again, the file is in the folder and is called amsterdam.csv\n",
     "\n",
-    "rdx_min = 110563\n",
-    "rdx_max = 131210\n",
-    "rdy_min = 479293\n",
-    "rdy_max = 493824\n",
+    "#Links onder: 117623, 483348\n",
+    "#Rechts onder: 122646, 483714\n",
+    "#Links boven: 117761, 485643\n",
+    "#Rechts boven: 122155, 485407\n",
+    "\n",
+    "rdx_min = 117623\n",
+    "rdx_max = 122646\n",
+    "rdy_min = 483348\n",
+    "rdy_max = 485407\n",
     "\n",
     "df_kadam = data[(data['rdx'] > rdx_min) & \n",
     "               (data['rdx'] < rdx_max) &\n",
     "              (data['rdy'] > rdy_min) &\n",
     "              (data['rdy'] < rdy_max)]\n",
     "\n",
-    "df_kadam.to_csv('amsterdam.csv')"
+    "df_kadam.to_csv('amsterdamzuid.csv')"
    ]
   },
   {
@@ -263,306 +268,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "111736.51855580538\n",
-      "522993.6117554743\n",
-      "907 addressen\n"
+     "ename": "NameError",
+     "evalue": "name 'from_wgs84' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/tv/408nk24n42j7rhs01s6ptxc00000gn/T/ipykernel_69427/1607116567.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mwgs84\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m52.692644\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m4.747290\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mrdx_punt\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mrdy_punt\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfrom_wgs84\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mRDWGS84Converter\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mwgs84\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mwgs84\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrdx_punt\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrdy_punt\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'from_wgs84' is not defined"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>perceelid</th>\n",
-       "      <th>perceeltype</th>\n",
-       "      <th>huisnr</th>\n",
-       "      <th>huisnr_bag_letter</th>\n",
-       "      <th>huisnr_bag_toevoeging</th>\n",
-       "      <th>bag_nummeraanduidingid</th>\n",
-       "      <th>bag_adresseerbaarobjectid</th>\n",
-       "      <th>lat</th>\n",
-       "      <th>lon</th>\n",
-       "      <th>rdx</th>\n",
-       "      <th>rdy</th>\n",
-       "      <th>oppervlakte</th>\n",
-       "      <th>gebruiksdoel</th>\n",
-       "      <th>reeksid</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1000649</th>\n",
-       "      <td>1094456</td>\n",
-       "      <td>verblijfsobject</td>\n",
-       "      <td>28</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>4.162000e+14</td>\n",
-       "      <td>4.160100e+14</td>\n",
-       "      <td>52.678603</td>\n",
-       "      <td>4.775064</td>\n",
-       "      <td>113601.0000</td>\n",
-       "      <td>521415.0000</td>\n",
-       "      <td>207</td>\n",
-       "      <td>woonfunctie,bijeenkomstfunctie</td>\n",
-       "      <td>66948</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1005580</th>\n",
-       "      <td>1099395</td>\n",
-       "      <td>verblijfsobject</td>\n",
-       "      <td>1</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>4.162000e+14</td>\n",
-       "      <td>4.160100e+14</td>\n",
-       "      <td>52.691740</td>\n",
-       "      <td>4.769423</td>\n",
-       "      <td>113232.0000</td>\n",
-       "      <td>522880.0000</td>\n",
-       "      <td>365</td>\n",
-       "      <td>kantoorfunctie</td>\n",
-       "      <td>67359</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1005581</th>\n",
-       "      <td>1099396</td>\n",
-       "      <td>verblijfsobject</td>\n",
-       "      <td>3</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>4.162000e+14</td>\n",
-       "      <td>4.160100e+14</td>\n",
-       "      <td>52.691215</td>\n",
-       "      <td>4.770392</td>\n",
-       "      <td>113297.0000</td>\n",
-       "      <td>522821.0000</td>\n",
-       "      <td>215</td>\n",
-       "      <td>bijeenkomstfunctie</td>\n",
-       "      <td>67359</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1005582</th>\n",
-       "      <td>1099397</td>\n",
-       "      <td>verblijfsobject</td>\n",
-       "      <td>1</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>4.162000e+14</td>\n",
-       "      <td>4.160100e+14</td>\n",
-       "      <td>52.694395</td>\n",
-       "      <td>4.770184</td>\n",
-       "      <td>113286.0000</td>\n",
-       "      <td>523175.0000</td>\n",
-       "      <td>1450</td>\n",
-       "      <td>industriefunctie,logiesfunctie</td>\n",
-       "      <td>67360</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1005583</th>\n",
-       "      <td>1099398</td>\n",
-       "      <td>standplaats</td>\n",
-       "      <td>1</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>501</td>\n",
-       "      <td>4.162000e+14</td>\n",
-       "      <td>4.160300e+14</td>\n",
-       "      <td>52.695034</td>\n",
-       "      <td>4.767887</td>\n",
-       "      <td>113131.3039</td>\n",
-       "      <td>523247.3899</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>67360</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1462011</th>\n",
-       "      <td>8545345</td>\n",
-       "      <td>standplaats</td>\n",
-       "      <td>1</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>546</td>\n",
-       "      <td>4.162000e+14</td>\n",
-       "      <td>4.160300e+14</td>\n",
-       "      <td>52.694657</td>\n",
-       "      <td>4.767547</td>\n",
-       "      <td>113107.9628</td>\n",
-       "      <td>523205.7116</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>67360</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1462012</th>\n",
-       "      <td>8545346</td>\n",
-       "      <td>standplaats</td>\n",
-       "      <td>1</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>534</td>\n",
-       "      <td>4.162000e+14</td>\n",
-       "      <td>4.160300e+14</td>\n",
-       "      <td>52.694357</td>\n",
-       "      <td>4.767645</td>\n",
-       "      <td>113114.2568</td>\n",
-       "      <td>523172.2122</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>67360</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1462013</th>\n",
-       "      <td>8545347</td>\n",
-       "      <td>standplaats</td>\n",
-       "      <td>1</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>535</td>\n",
-       "      <td>4.162000e+14</td>\n",
-       "      <td>4.160300e+14</td>\n",
-       "      <td>52.694347</td>\n",
-       "      <td>4.767455</td>\n",
-       "      <td>113101.4408</td>\n",
-       "      <td>523171.2624</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>67360</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1462014</th>\n",
-       "      <td>8545348</td>\n",
-       "      <td>standplaats</td>\n",
-       "      <td>1</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>536</td>\n",
-       "      <td>4.162000e+14</td>\n",
-       "      <td>4.160300e+14</td>\n",
-       "      <td>52.694377</td>\n",
-       "      <td>4.767203</td>\n",
-       "      <td>113084.4538</td>\n",
-       "      <td>523174.6752</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>67360</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1472478</th>\n",
-       "      <td>8609242</td>\n",
-       "      <td>verblijfsobject</td>\n",
-       "      <td>1</td>\n",
-       "      <td>A</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>4.162000e+14</td>\n",
-       "      <td>4.160100e+14</td>\n",
-       "      <td>52.704760</td>\n",
-       "      <td>4.776576</td>\n",
-       "      <td>113727.8580</td>\n",
-       "      <td>524324.6080</td>\n",
-       "      <td>2213</td>\n",
-       "      <td>industriefunctie</td>\n",
-       "      <td>67431</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>907 rows × 14 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         perceelid      perceeltype  huisnr huisnr_bag_letter  \\\n",
-       "1000649    1094456  verblijfsobject      28               NaN   \n",
-       "1005580    1099395  verblijfsobject       1               NaN   \n",
-       "1005581    1099396  verblijfsobject       3               NaN   \n",
-       "1005582    1099397  verblijfsobject       1               NaN   \n",
-       "1005583    1099398      standplaats       1               NaN   \n",
-       "...            ...              ...     ...               ...   \n",
-       "1462011    8545345      standplaats       1               NaN   \n",
-       "1462012    8545346      standplaats       1               NaN   \n",
-       "1462013    8545347      standplaats       1               NaN   \n",
-       "1462014    8545348      standplaats       1               NaN   \n",
-       "1472478    8609242  verblijfsobject       1                 A   \n",
-       "\n",
-       "        huisnr_bag_toevoeging  bag_nummeraanduidingid  \\\n",
-       "1000649                   NaN            4.162000e+14   \n",
-       "1005580                   NaN            4.162000e+14   \n",
-       "1005581                   NaN            4.162000e+14   \n",
-       "1005582                   NaN            4.162000e+14   \n",
-       "1005583                   501            4.162000e+14   \n",
-       "...                       ...                     ...   \n",
-       "1462011                   546            4.162000e+14   \n",
-       "1462012                   534            4.162000e+14   \n",
-       "1462013                   535            4.162000e+14   \n",
-       "1462014                   536            4.162000e+14   \n",
-       "1472478                   NaN            4.162000e+14   \n",
-       "\n",
-       "         bag_adresseerbaarobjectid        lat       lon          rdx  \\\n",
-       "1000649               4.160100e+14  52.678603  4.775064  113601.0000   \n",
-       "1005580               4.160100e+14  52.691740  4.769423  113232.0000   \n",
-       "1005581               4.160100e+14  52.691215  4.770392  113297.0000   \n",
-       "1005582               4.160100e+14  52.694395  4.770184  113286.0000   \n",
-       "1005583               4.160300e+14  52.695034  4.767887  113131.3039   \n",
-       "...                            ...        ...       ...          ...   \n",
-       "1462011               4.160300e+14  52.694657  4.767547  113107.9628   \n",
-       "1462012               4.160300e+14  52.694357  4.767645  113114.2568   \n",
-       "1462013               4.160300e+14  52.694347  4.767455  113101.4408   \n",
-       "1462014               4.160300e+14  52.694377  4.767203  113084.4538   \n",
-       "1472478               4.160100e+14  52.704760  4.776576  113727.8580   \n",
-       "\n",
-       "                 rdy  oppervlakte                    gebruiksdoel  reeksid  \n",
-       "1000649  521415.0000          207  woonfunctie,bijeenkomstfunctie    66948  \n",
-       "1005580  522880.0000          365                  kantoorfunctie    67359  \n",
-       "1005581  522821.0000          215              bijeenkomstfunctie    67359  \n",
-       "1005582  523175.0000         1450  industriefunctie,logiesfunctie    67360  \n",
-       "1005583  523247.3899            0                             NaN    67360  \n",
-       "...              ...          ...                             ...      ...  \n",
-       "1462011  523205.7116            0                             NaN    67360  \n",
-       "1462012  523172.2122            0                             NaN    67360  \n",
-       "1462013  523171.2624            0                             NaN    67360  \n",
-       "1462014  523174.6752            0                             NaN    67360  \n",
-       "1472478  524324.6080         2213                industriefunctie    67431  \n",
-       "\n",
-       "[907 rows x 14 columns]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
