mini selectie data

--- a/klad.ipynb
+++ b/klad.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
        "4  122185.0  487883.0           91  kantoorfunctie        2  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,17 +194,22 @@
     "#Links boven: 117761, 485643\n",
     "#Rechts boven: 122155, 485407\n",
     "\n",
-    "rdx_min = 117623\n",
-    "rdx_max = 122646\n",
-    "rdy_min = 483348\n",
-    "rdy_max = 485407\n",
+    "#rdx_min = 117623\n",
+    "#rdx_max = 122646\n",
+    "#rdy_min = 483348\n",
+    "#rdy_max = 485407\n",
+    "\n",
+    "rdx_min = 121623\n",
+    "rdx_max = 122146\n",
+    "rdy_min = 484348\n",
+    "rdy_max = 484907\n",
     "\n",
     "df_kadam = data[(data['rdx'] > rdx_min) & \n",
     "               (data['rdx'] < rdx_max) &\n",
     "              (data['rdy'] > rdy_min) &\n",
     "              (data['rdy'] < rdy_max)]\n",
     "\n",
-    "df_kadam.to_csv('amsterdamzuid.csv')"
+    "df_kadam.to_csv('amsterdamzuid-klein.csv')"
    ]
   },
   {
